# tauri-encrypted-sqlite-drizzle

./: README.md  drizzle.config.ts  package.json  tsconfig.json
apps/client/: index.html  package.json  tsconfig.json
apps/client/src/: routeTree.gen.ts  router.tsx  styles.css  vite-env.d.ts
apps/client/src/db/: index.ts
apps/client/src/db/schema/: index.ts  todo.ts  user.ts
apps/client/src/routes/: __root.tsx
apps/client/src/routes/(root)/: auth.tsx  index.tsx
apps/client/src/utils/: router.ts  tauri-commands.ts
tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
tauri/capabilities/: default.json
tauri/migrations/: 20251123093354_solid_patriot.sql  20251123162206_blushing_sersi.sql  20251124100430_workable_bedlam.sql
tauri/migrations/meta/: 20251123093354_snapshot.json  20251123162206_snapshot.json  20251124100430_snapshot.json  20251125081107_snapshot.json  _journal.json
tauri/src/: commands.rs  domain.rs  fs.rs  lib.rs  main.rs
tauri/src/db/: migration.rs  mod.rs  proxy.rs
