[package]
name = "tauri-sqlite"
version = "0.1.0"
description = "A Tauri app with encrypted SQLite"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_sqlite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12.5"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
    "migrate",
    "uuid",
    "chrono",
] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher"] }
chrono = { version = "0.4.42", features = ["serde"] }
tauri-plugin-fs = "2.4.4"
